# qiduandebug

./: .env.development  .env.production  .env.test  .prettierrc.mjs  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  前端代码质量分析报告.md
docs/: BGE-M3-MIGRATION-GUIDE.md  CLAUDE.md  technical-roadmap.html  technical-roadmap.md  time-decay-design.html
docs/public/usage/: CLAUDE.md
embedding-mcp-server/: CLAUDE.md  README.md  pyproject.toml  server.py
forecast_compare/output/: CLAUDE.md
openclaw/: openclaw.plugin.json
openclaw/src/: index.ts
plugin/modes/: CLAUDE.md
plugin/scripts/: context-generator.cjs  mcp-server.cjs  worker-service.cjs
scripts/: migrate-embeddings.ts
scripts/translate-readme/: CLAUDE.md
src/: App.vue  AppRefactored.vue  main.js  style.css
src/api/agent/: actions.js
src/assets/: 22b9e2c2-7367-4d5f-a0a1-016f34937e22.jfif  Loading.rar  back.jfif  back1.jfif  loading.avi  立讯技术LOGO2023.rar
src/assets/立讯技术LOGO2023/: 新建 Microsoft Word 文档.docx
src/cli/adapters/: CLAUDE.md
src/cli/handlers/: CLAUDE.md
src/components/: QuestionDetail.vue  QuestionList.vue
src/pages/login/: index.vue
src/pages/main/: index.vue  test.vue
src/router/: index.js
src/sdk/: CLAUDE.md
src/servers/: CLAUDE.md
src/services/: CLAUDE.md  worker-service.ts
src/services/context/: CLAUDE.md
src/shared/: CLAUDE.md  SettingsDefaultsManager.ts
src/utils/: common.js  directives.js  eventBus.js  excelWorker.js  logger.ts  net.js  request.js  rsa.js  sse.js  useShared.js
src/utilsnew/: README.md
(+67 files in other folders)
