[project]
name = "claude-mem-embedding-mcp"
version = "1.0.0"
description = "BGE-M3 Embedding MCP Server for claude-mem"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "claude-mem contributors" }
]
keywords = ["mcp", "embedding", "bge-m3", "claude-mem"]

dependencies = [
    "mcp>=1.0.0",
    "FlagEmbedding>=1.2.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
cpu = [
    "torch>=2.0.0",
]

[project.scripts]
embedding-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
